--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"@types/fs-extra": "^5.0.4",
 		"adler-32": "^1.2.0",
 		"fs-extra": "^7.0.1",
-		"fuse-bindings": "https://github.com/dennisss/fuse-bindings.git#46279f0c864af21c95f7c6b3b466b7f73f459036",
+		"fuse-bindings": "file:./fuse-bindings",
 		"tslib": "^1.9.3",
 		"xml2js": "^0.4.19"
 	}
